--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 		  <!--custom css-->
-	    	<link href="style/main.css" rel="stylesheet">
+	    	<link href="main.css" rel="stylesheet">
   </head>
   <body>
   <div id="main" class="custom-container">
